--- a/MemoApplication/Screen/HomeScreen/Base.lproj/Home.storyboard
+++ b/MemoApplication/Screen/HomeScreen/Base.lproj/Home.storyboard
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="DUJ-ws-YN9">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="MemoApplication" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="blQ-f0-5p7"/>
+                        <viewControllerLayoutGuide type="bottom" id="ove-KH-Ssu"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -28,7 +32,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Of1-0B-6PA">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="Of1-0B-6PA">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -38,36 +42,64 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q0w-31-0Ia">
+                                <rect key="frame" x="20" y="412" width="374" height="450"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="w2x-ya-7M3">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w2x-ya-7M3" id="jGe-aN-2e9">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Eya-UQ-HRo" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="97R-iw-r5z"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Eya-UQ-HRo" secondAttribute="bottom" constant="450" id="RwR-6u-Aae"/>
-                            <constraint firstItem="Eya-UQ-HRo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ZLZ-99-oWl"/>
-                            <constraint firstItem="Eya-UQ-HRo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bSz-HI-Tmb"/>
+                            <constraint firstItem="ove-KH-Ssu" firstAttribute="top" secondItem="q0w-31-0Ia" secondAttribute="bottom" id="2gb-Oo-5fL"/>
+                            <constraint firstItem="Eya-UQ-HRo" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="97R-iw-r5z"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="q0w-31-0Ia" secondAttribute="trailing" id="F7i-7M-nDP"/>
+                            <constraint firstItem="ove-KH-Ssu" firstAttribute="top" secondItem="Eya-UQ-HRo" secondAttribute="bottom" constant="450" id="RwR-6u-Aae"/>
+                            <constraint firstItem="Eya-UQ-HRo" firstAttribute="top" secondItem="blQ-f0-5p7" secondAttribute="bottom" id="ZLZ-99-oWl"/>
+                            <constraint firstItem="Eya-UQ-HRo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bSz-HI-Tmb"/>
+                            <constraint firstItem="q0w-31-0Ia" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dDe-3p-bTX"/>
+                            <constraint firstItem="q0w-31-0Ia" firstAttribute="top" secondItem="Eya-UQ-HRo" secondAttribute="bottom" id="nLE-YP-Aou"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="cVN-rw-BAn">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="dhA-Dw-iKx">
-                            <color key="tintColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </barButtonItem>
+                    <navigationItem key="navigationItem" id="tDQ-Qu-2hu">
+                        <barButtonItem key="leftBarButtonItem" title="Item" id="WdA-zK-mdt"/>
                         <rightBarButtonItems>
-                            <barButtonItem systemItem="add" id="DkI-5Q-hGv">
-                                <color key="tintColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </barButtonItem>
-                            <barButtonItem systemItem="search" id="u5X-Jb-nvL">
-                                <color key="tintColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </barButtonItem>
+                            <barButtonItem title="Item" id="1sm-tA-BmQ"/>
+                            <barButtonItem title="Item" id="C2x-gL-VI7"/>
                         </rightBarButtonItems>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="titleItem" destination="cVN-rw-BAn" id="AIe-Je-GW3"/>
+                        <outlet property="collectionView" destination="Eya-UQ-HRo" id="UCK-1n-3Zg"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957.97101449275374" y="20.758928571428569"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xhc-1j-D1r">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DUJ-ws-YN9" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gRy-Pi-FfY">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fPA-Qn-bdP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g16-VT-m6M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="47.826086956521742" y="20.758928571428569"/>
         </scene>
